tests/NormalTests/paczka1/fuzzy1/87577521.err
Error in line 5: A749 A633 12,6
Error in line 20: QZhMdJTvmTQ A633 40,2
Error in line 26: 0icwgP0mh6 A714 9,5
